--- a/index.html
+++ b/index.html
@@ -4,11 +4,74 @@
 		<meta charset="UTF-8" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>weather_forecast</title>
+		<title>Weather</title>
 	</head>
 	<body>
-		<header></header>
-		<main></main>
+		<header class="p-3 bg-emerald-400">
+			<p class="text-2xl p-2 text-center">Weather Dashboard</p>
+		</header>
+		<main>
+			<section
+				id="search-form"
+				class="m-4 flex flex-col md:flex-row space-y-4 md:space-y-0"
+			>
+				<form
+					id="weather-form"
+					class="flex flex-col border mb:w-full xs:w-10/12 md:w-5/12 lg:w-4/12 2xl:w-3/12 space-y-2 p-4 mx-auto md:mx-0"
+				>
+					<label for="city" class="font-semibold text-center"
+						>Enter City Name</label
+					>
+					<span class="flex space-x-3">
+						<input
+							type="text"
+							name="city"
+							id="weather-city"
+							class="p-1 rounded-lg w-9/12 mb:w-10/12 xs:w-11/12 border mx-auto mr-2"
+						/>
+						<input
+							type="submit"
+							value="Search"
+							class="bg-emerald-400 rounded-lg px-2 flex-1 mx-auto"
+						/>
+					</span>
+					<div class="flex items-center">
+						<div class="grow border-t border-gray-400"></div>
+						<span class="px-4 text-gray-500 font-semibold">OR</span>
+						<div class="grow border-t border-gray-400"></div>
+					</div>
+					<span class="flex p-2 space-x-2 justify-center">
+						<select
+							name="locations"
+							class="mx-auto p-0.5 w-10/12 border rounded-xl"
+							id="searched_locations"
+						>
+							<option value="Mumbai">Mumbai</option>
+							<option value="Pune">Pune</option>
+							<option value="Chennai">Chennai</option>
+							<option value="Delhi">Delhi</option>
+							<option value="Hyderabad">Hyderabad</option>
+						</select>
+						<button
+							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 ml-2"
+						>
+							<img
+								title="Location"
+								src="/icons/location.png"
+								alt="Get Current Location"
+								class="size-6 items-center"
+							/>
+						</button>
+					</span>
+				</form>
+				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:ml-4">
+					<div
+						class="p-4 h-50 md:h-full mx-auto border flex"
+						id="description"
+					></div>
+				</div>
+			</section>
+		</main>
 		<footer></footer>
 		<script type="module" src="/src/main.js"></script>
 	</body>
