added weather from location

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 							class="hidden mx-auto p-0.5 w-10/12 border rounded-xl"
 							id="searched_locations"
 						></select>
-						<button
+						<a
+							id="use-location"
 							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 ml-2"
 						>
 							<img
@@ -58,7 +59,7 @@
 								alt="Get Current Location"
 								class="size-6 items-center"
 							/>
-						</button>
+						</a>
 					</span>
 				</form>
 				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:ml-4">
