--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 			<p class="text-2xl p-2 text-center">Weather Dashboard</p>
 		</header>
 		<main>
-			<p id="error" class="hidden text-red-500 mt-2"></p>
-
+			<!--<p id="error" class="hidden text-red-500 mt-2"></p>-->
+			<div
+				id="error"
+				class="fixed top-4 right-4 z-50 hidden max-w-sm rounded-xl bg-gray-900 px-4 py-3 text-sm text-white shadow-lg transition-all duration-300"
+			>
+				<p id="toast-message"></p>
+			</div>
 			<section
 				id="search-form"
 				class="m-4 flex flex-col md:flex-row space-y-4 md:space-y-0"
