--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<htmr lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -11,17 +11,25 @@
 			<p class="text-2xl p-2 text-center">Weather Dashboard</p>
 		</header>
 		<main>
-			<!--<p id="error" class="hidden text-red-500 mt-2"></p>-->
+			<p id="error" class="hidden text-red-500 mt-2"></p>
+			<!-- Toast container -->
 			<div
-				id="error"
+				id="toast"
 				class="fixed top-4 right-4 z-50 hidden max-w-sm rounded-xl bg-gray-900 px-4 py-3 text-sm text-white shadow-lg transition-all duration-300"
 			>
 				<p id="toast-message"></p>
 			</div>
+
 			<section
 				id="search-form"
 				class="m-4 flex flex-col md:flex-row space-y-4 md:space-y-0"
 			>
+				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:mr-4">
+					<div
+						class="p-4 h-50 md:h-full mx-auto border flex"
+						id="description"
+					></div>
+				</div>
 				<form
 					id="weather-form"
 					class="flex flex-col border mb:w-full xs:w-10/12 md:w-5/12 lg:w-4/12 2xl:w-3/12 space-y-2 p-4 mx-auto md:mx-0"
@@ -56,7 +64,7 @@
 						></select>
 						<a
 							id="use-location"
-							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 ml-2"
+							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 mr-2"
 						>
 							<img
 								title="Location"
@@ -67,15 +75,9 @@
 						</a>
 					</span>
 				</form>
-				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:ml-4">
-					<div
-						class="p-4 h-50 md:h-full mx-auto border flex"
-						id="description"
-					></div>
-				</div>
 			</section>
 		</main>
 		<footer></footer>
 		<script type="module" src="/src/main.js"></script>
 	</body>
-</html>
+</htmr>
