--- a/index.html
+++ b/index.html
@@ -20,16 +20,32 @@
 				<p id="toast-message"></p>
 			</div>
 
-			<section
-				id="search-form"
-				class="m-4 flex flex-col md:flex-row space-y-4 md:space-y-0"
-			>
+			<section class="m-4 flex flex-col md:flex-row space-y-4 md:space-y-0">
+				<!-- Panel -->
 				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:mr-4">
-					<div
-						class="p-4 h-50 md:h-full mx-auto border flex"
-						id="description"
-					></div>
+					<div class="p-4 mx-auto border flex space-x-3 lg:h-80">
+						<article class="w-2/3">
+							<div
+								id="loc"
+								class="flex items-center justify-center space-x-7 text-center text-lg sm:text-2xl font-semibold p-2 mx-auto"
+							></div>
+							<div id="box" class="flex flex-col space-y-4 mt-2 pl-3"></div>
+						</article>
+						<article
+							class="flex-1 flex flex-col items-center justify-center space-y-2"
+						>
+							<img id="weather-icon" class="mx-auto" />
+							<div id="description" class="text-center"></div>
+							<button
+								id="toggle-temps"
+								class="px-4 py-2 rounded-lg bg-gray-400 mt-2"
+							>
+								°C
+							</button>
+						</article>
+					</div>
 				</div>
+				<!-- Weather Form -->
 				<form
 					id="weather-form"
 					class="flex flex-col border mb:w-full xs:w-10/12 md:w-5/12 lg:w-4/12 2xl:w-3/12 space-y-2 p-4 mx-auto md:mx-0"
@@ -64,7 +80,7 @@
 						></select>
 						<a
 							id="use-location"
-							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 mr-2"
+							class="flex items-center rounded-full p-1 bg-violet-200 shadow-lg hover:bg-gray-300 ml-4"
 						>
 							<img
 								title="Location"
