--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<!-- Panel -->
 				<div class="mb:w-full xs:w-10/12 space-y-2 mx-auto md:flex-1 md:mr-4">
 					<div class="p-4 mx-auto border flex space-x-3 lg:h-80">
-						<article class="w-2/3">
+						<article class="w-1/2">
 							<div
 								id="loc"
 								class="flex items-center justify-center space-x-7 text-center text-lg sm:text-2xl font-semibold p-2 mx-auto"
@@ -91,6 +91,14 @@
 						</a>
 					</span>
 				</form>
+			</section>
+
+			<section>
+				<p class="text-center text-3xl p-4">5 Day Forecast</p>
+				<div
+					id="forecast"
+					class="grid grid-cols-2 sm:grid-cols-3 md:flex mx-auto justify-around items-center mt-3 p-2 gap-2"
+				></div>
 			</section>
 		</main>
 		<footer></footer>
